--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 </head>
 <body>
     <div class="app">
+        <!-- Custom Title Bar -->
+        <div class="title-bar">
+            <div class="title-bar-content">
+                <span class="title-text">Windows 11 Planner</span>
+                <div class="title-bar-controls">
+                    <button class="title-btn minimize" id="minimize-btn">─</button>
+                    <button class="title-btn maximize" id="maximize-btn">□</button>
+                    <button class="title-btn close" id="close-btn">✕</button>
+                </div>
+            </div>
+        </div>
         <header class="app-header">
             <h1>Planner</h1>
         </header>
