--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         
         <header class="app-header">
             <div class="app-logo" onclick="location.reload()">FocusPlanner</div>
+            <div class="subscription-status" id="subscription-status">
+                <span class="status-indicator" id="status-indicator">●</span>
+                <span class="status-text" id="status-text">Loading...</span>
+            </div>
         </header>
         <div class="dashboard">
             <div class="stat-card">
